--- a/backend/spring-boot-espada-store/src/main/resources/application.yml
+++ b/backend/spring-boot-espada-store/src/main/resources/application.yml
@@ -37,3 +37,10 @@ verify-code:
 
 success-request-code: 1000
 
+order:
+  state:
+    waiting-confirm: "waiting-confirm"
+    preparing: "preparing"
+    shipping: "shipping"
+    to-customer: "to-customer"
+    delivered: "delivered"
