Some updates: . Add api document for all controllers . Dynamically fetch types and subtypes in frontend

--- a/backend/spring-boot-espada-store/src/main/resources/application.yml
+++ b/backend/spring-boot-espada-store/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
 
 client:
   home-page: "http://localhost:3000"
+  verification-success-page: "http://localhost:3000/verification-success"
+  order-page: "http://localhost:3000/my-order"
 
 spring:
   datasource:
