--- a/backend/spring-boot-espada-store/src/test/resources/application-test.properties
+++ b/backend/spring-boot-espada-store/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
+spring.config.activate.on-profile=test
 spring.datasource.url = jdbc:h2:mem:testdb;MODE=MySQL
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
