Updates: . Split environment . Build docker image and container for production

--- a/backend/spring-boot-espada-store/Dockerfile.prod
+++ b/backend/spring-boot-espada-store/Dockerfile.prod
@@ -4,6 +4,6 @@ ARG FILE_JAR=target/*.jar
 
 ADD ${FILE_JAR} espada-api-service.jar
 
-ENTRYPOINT ["java", "jar", "espada-api-service.jar"]
+ENTRYPOINT ["java", "-jar", "espada-api-service.jar"]
 
 EXPOSE 8080
