--- a/backend/spring-boot-espada-store/pom.xml
+++ b/backend/spring-boot-espada-store/pom.xml
@@ -126,6 +126,33 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<excludes>
+						<exclude>com/nqt/spring_boot_espada_store/entity/**</exclude>
+						<exclude>com/nqt/spring_boot_espada_store/dto/**</exclude>
+						<exclude>com/nqt/spring_boot_espada_store/mapper/**</exclude>
+						<exclude>com/nqt/spring_boot_espada_store/configuration/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
